--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -9,6 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Hello!</h1>
+    <header class="header">
+        <h1>Tic-Tac-Toe</h1>
+    </header>
+    <div class="board" id="game-board">
+
+    </div>
 </body>
 </html>
