--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header class="header">
         <h1>Tic-Tac-Toe</h1>
     </header>
-    <div class="board" id="game-board">
-
+    <div class="board" id="game-board"></div>
+    <div class="reset">
+        <button type="button" id="game-restart">New Game</button>
     </div>
 </body>
 </html>
