Add button for players and default. Add options module Added options module to sort out the event listeners on option bar Added player factory function.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
     <div class="board" id="game-board"></div>
-    <div class="reset">
+    <div class="reset" id="game-options">
+        <button type="button" id="game-players">Enter Players</button>
+        <button type="button" id="game-default">Vs Ai</button>
         <button type="button" id="game-restart">New Game</button>
     </div>
 </body>
