Add markBoard function Function marks the board based on playerTurn boolean. Added event listener for gameboard on playGame module.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header class="header">
         <h1>Tic-Tac-Toe</h1>
+        <h2 id="game-display"></h2>
     </header>
     <div class="board" id="game-board"></div>
     <div class="reset" id="game-options">
