Add createBoard function along with various other helper functions Added a range to change the grid size on board. This required me to create boardArray and gridSize to remake those values as opposed to passing const variables.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button type="button" id="game-players">Enter Players</button>
         <button type="button" id="game-default">Vs Ai</button>
         <button type="button" id="game-restart">New Game</button>
+        <input type="range" id="game-size" name="game-size" min="3" max="5" value="3">
     </div>
 </body>
 </html>
