Clear logic errors on displayTie and with player one vs ai Cleaned up some bugs while testing. Stopped event listener from crashing if ithits the inner borders. Properly logs the winner when vs ai by having the player check on aimoves function

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header class="header">
         <h1>Tic-Tac-Toe</h1>
-        <h2 id="game-display"></h2>
+        <h2 id="game-display">Click new game to begin</h2>
     </header>
     <div class="board" id="game-board"></div>
     <div class="reset" id="game-options">
-        <button type="button" id="game-players">Enter Players</button>
-        <button type="button" id="game-default">Vs Ai</button>
-        <button type="button" id="game-restart">New Game</button>
+        <button type="button" class="button" id="game-players">Enter Players</button>
+        <button type="button" class="button" id="game-default">Vs Ai</button>
+        <button type="button" class="button" id="game-restart">New Game</button>
         <input type="range" id="game-size" name="game-size" min="3" max="5" value="3">
     </div>
 </body>
